--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -11,16 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select your Interests"
+        android:id="@+id/heading"
         android:layout_marginVertical="30dp"
         android:textStyle="bold"
         android:textSize="24dp"
 
-        android:textAlignment="center"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="Submit"
-        android:background="@color/common_google_signin_btn_text_light_disabled"/>
+        android:textAlignment="center"
+        tools:ignore="InvalidId" />
+
 
 
 
@@ -30,11 +28,23 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/interestList"
-    tools:ignore="InvalidId">
+    android:layout_below="@+id/heading"
+
+    android:layout_above="@+id/submitBtn"
+    tools:ignore="InvalidId,UnknownId">
 
 
 </androidx.recyclerview.widget.RecyclerView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Submit"
+
+        android:layout_alignParentBottom="true"
+        android:id="@+id/submitBtn"
+        android:layout_marginVertical="20dp"
+        android:background="@color/design_default_color_on_primary"/>
 
 
-</LinearLayout>
+</RelativeLayout>
 
