--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,5 +60,8 @@
         app:cornerRadius="8dp"
 
         android:text="@string/login"/>
-
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+android:id="@+id/progressBar"/>
 </LinearLayout>
