--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -9,6 +9,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:layout_gravity="center_vertical"/>
+   <ImageButton
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="50px"
+       android:id="@+id/add"
+       android:src="@drawable/ic_baseline_add_circle_24"/>
+
+
+
 
 </FrameLayout>
