--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,21 +39,21 @@
     android:orientation="vertical"
 
     >
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
         android:id="@+id/fragmentLayout"
+        android:layout_width="401dp"
+        android:layout_height="640dp"
         android:orientation="vertical">
 
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu"
-        android:background="@color/cardview_dark_background"
         android:id="@+id/nav_view"
->
+        android:layout_width="match_parent"
+        android:layout_height="84dp"
+        android:background="@color/colorPrimary"
+        app:menu="@menu/bottom_nav_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
