--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,19 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Home"
+        android:visible="true" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_file_star_24dp"
+        android:icon="@drawable/ic_baseline_save_24"
         android:title="@string/title_saved" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_account_24dp"
+        android:icon="@drawable/ic_baseline_person_24"
         android:title="@string/title_profile" />
+    <item android:title="My blogs" />
 
 </menu>
