--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -10,13 +10,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select your Interests"
+        android:text="Please tell us a bit more!"
         android:id="@+id/heading"
         android:layout_marginVertical="30dp"
         android:textStyle="bold"
         android:textSize="24dp"
+        android:textColor="@color/cardview_dark_background"
 
-        android:textAlignment="center"
+
         tools:ignore="InvalidId" />
 
 
