--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="208dp"
-        android:background="@color/lightPrimary"
+        android:background="@drawable/gradient_profile"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -40,7 +40,7 @@
                 android:layout_height="80dp"
                 android:src="@drawable/ic_baseline_person_24"
 
-                android:tint="@color/colorAccent"
+                android:tint="@color/colorPrimary"
                 tools:ignore="UseAppTint">
 
             </ImageView>
